Use dotenv-save instead of dotenv
Register is registering and saving secure to .env
mock-client is retrieving token when start

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/fedberry/mock-client#readme",
   "dependencies": {
-    "dotenv": "^2.0.0",
     "cluster": "^0.7.7",
+    "dotenv-save": "^1.2.0",
     "request": "^2.74.0"
   },
   "devDependencies": {
