- Add service file and start service - Speed up mock via no cache clean via fedberry-24-armv6l.cfg. - Mock: use DNF instead of yum. - Register agent on start up.

--- a/config/mock-client.config
+++ b/config/mock-client.config
@@ -1,2 +1,4 @@
 MOCK_SERVER=http://mock.fedberry.org/
 INTERFACE=usb0
+MOCK_CONFIG="fedberry-24-armv6l"
+MOCK_OPTIONS="--no-clean --no-cleanup-after --nocheck"
