--- a/config/fedberry-24-armv6l.cfg
+++ b/config/fedberry-24-armv6l.cfg
@@ -6,8 +6,9 @@ config_opts['chroot_setup_cmd'] = 'install bash bzip2 coreutils cpio diffutils s
 config_opts['dist'] = 'fc24'  # only useful for --resultdir variable subst
 config_opts['extra_chroot_dirs'] = [ '/run/lock', ]
 config_opts['releasever'] = '24'
-config_opts['resultdir'] = "/home/build/fc24"
-#config_opts['package_manager'] = 'dnf'
+config_opts['package_manager'] = 'dnf'
+config_opts['cleanup_on_success'] = False
+config_opts['cleanup_on_failure'] = False
 
 config_opts['mydist'] = ''
 config_opts['macros']['%vendor']="FedBerry"
