- Enable and start service. - Fix issue with url trim. - Add dependencies on nodejs-debug package. - Fix mock-client.service file to log data.

--- a/mock-client.service
+++ b/mock-client.service
@@ -3,8 +3,7 @@ Description=Mock client service
 After=syslog.target
 
 [Service]
-Type=forking
-PIDFile=/var/run/mock-client.pid
+Environment=DEBUG=*:log
 ExecStart=/usr/bin/mock-client
 ExecStop=/bin/rm -f /var/run/mock-client.pid
 User=mockclient
