Ensure we pull in our own kernel headers

--- a/config/fedberry-24-armv6l.cfg
+++ b/config/fedberry-24-armv6l.cfg
@@ -42,5 +42,6 @@ baseurl=http://download.fedberry.org/releases/24/packages/armv6hl/unstable
 name=Pignus $releasever - $basearch 23
 baseurl=https://pignus.computer/pub/linux/pignus/releases/23/Everything/$basearch/os/
 enabled=1
+exclude=kernel*
 
 """
